completed icons and fixed tile animation overlapping with navbar

--- a/index.css
+++ b/index.css
@@ -34,6 +34,7 @@ h1 {
   box-shadow: 0px 2px 10px 2px #141414;
   display: flex;
   justify-content: space-between;
+  z-index: 1;
   align-items: center;
   width: 100%;
   height: 50px;
@@ -57,7 +58,7 @@ h1 {
   padding: 10px;
 }
 
-#welcome-section {
+#welcome {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -69,13 +70,13 @@ h1 {
   font-size: 21pt;
 }
 
-#welcome-section h1 {
+#welcome h1 {
   padding: 15px;
   color: white;
   text-shadow: 0 0 3px rgb(0, 0, 0);
 }
 
-#welcome-section h4 {
+#welcome h4 {
   padding: 5px;
 }
 
@@ -91,10 +92,9 @@ h1 {
 }
 
 #about-me-p {
-  background-color: #ff3406d8;
+  background-color: #e42904dc;
   background-image: url(Pattern.png);
-  border-radius: 20px;
-  width: 85vw;
+  width: auto;
   padding: 5%;
   box-shadow: 0 4px 15px black;
 }
@@ -122,7 +122,7 @@ h1 {
 }
 
 .project-tile {
-  width: 25vw;
+  width: 26vw;
   height: 68vh;
   margin: 50px;
   display: flex;
@@ -136,7 +136,7 @@ h1 {
 }
 
 .project-tile:hover {
-  transform: scale(1.1);
+  transform: scale(1.03);
 }
 
 .project-img {
@@ -151,14 +151,17 @@ h1 {
 
 #home-swap {
   background-color: #e3453d;
+  box-shadow: 5px 5px 10px rgb(48, 48, 48);
 }
 
 #cycles {
   background-color: #fad234e7;
+  box-shadow: 0px 5px 10px rgb(48, 48, 48);
 }
 
 #do-something {
   background-color: #5ae6ffb7;
+  box-shadow: -5px 5px 10px rgb(48, 48, 48);
 }
 
 #contact {
@@ -166,12 +169,14 @@ h1 {
   padding: 50px;
   align-items: center;
   justify-content: center;
+  background-color: #141414;
+  box-shadow: 0px -2px 10px 2px #141414;
 }
 
 #contact-info {
   display: flex;
   flex-direction: column;
-  font-size: 1.5vw;
+  font-size: 3vw;
   padding: 50px;
 }
 
@@ -180,7 +185,7 @@ h1 {
     display: none;
   }
 
-  #welcome-section {
+  #welcome {
     margin: 0;
   }
 
